--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,16 @@
             <artifactId>jersey-hk2</artifactId>
             <version>2.26</version>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.5</version>
+        </dependency>
     </dependencies>
 
     <build>
